--- a/index.html
+++ b/index.html
@@ -1,13 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Yodsakorn Website</title>
+  <title>Home Live "Yodsakorn"</title>
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@200&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@500&display=swap" rel="stylesheet">
 </head>
-<body>
-  <h1>Saweedee krub</h1>
+
+<body class="bg-red-400">
+   <!--Head bar-->
+   <div class="bg-white flex flex-nowrap rounded-l-2xl py-5 mt-3 ring-4 ring-gray-405 lg:justify-end md:justify-center">
+     <ul class="list-none bg- text-center p-0 m-0 flex justify-between md:justify-center">
+     <li class="text-xl text-center"><a href="index.html" class="no-underline text-green-700 block px-5  border-solid border-gray-200 delay-300 hover:bg-pink-400 hover:text-Yellow" target="_blank">Home</a></li>
+     <li class="text-xl text-center"><a href="experience.html" class="no-underline text-green-700 block px-5  border-solid border-gray-200 delay-300 hover:bg-pink-400 hover:text-Yellow" target="_blank">Experience</a></li>
+     <li class="text-xl text-center"><a href="contact.html" class="no-underline text-green-700 block px-5  border-solid border-gray-200 delay-300 hover:bg-pink-400 hover:text-Yellow" target="_blank">Contact</a></li>
+   </ul>
+    </div>
+     <!--element ด้านบน เว้นระยะห่างของเมนู-->
+       <div class="flex items-center justify-center mt-5">
+         <div class="h-screen bg-green-200 max-h-screen w-1/8 p-10  shadow-lg rounded-xl ring-1 ring-gray-305">
+           <!--menu link-->
+             <div class="flex items-center justify-center mb-10">
+               <div class="flex justify-between max-w-screen-md ">
+                 <div class="flex items-center justify-center mb-10">
+            <img src="images/p1.jpg" alt="" class="rounded-full w-60 border-4 border-grey-300">
+</div>          
+<footer></footer>
 </body>
+
+
+
+    <div class="bg-white w-7/12 p-10 h-auto shadow-lg rounded-xl ring-1 ring-Green-300">
+
+      <p class="flex text-xl font-bold">
+      <div class="text-center text-xl font-bold">
+        <font2>Hi, Nice a nice day</font2>
+      </div>
+      </p>
+
+      <p class="flex mt-8">
+        <font2>My name is Yodsakorn Likitrungson. I was born in Chiangmai Province. I love Programming. I am studying
+          Computer Engineering at Chiangmai University. I like to learn a lot. !!!
+        </font2>
+      </p>
+
+
+      <p class="flex mt-8 text-xl font-bold">
+      <div class="text-center text-xl font-bold">
+        <font2>My Ability</font2>
+      </div>
+      </p>
+
+      <div class="flex bg-blue max-w-screen-md mx-auto mt-8 shadow-lg rounded-xl ring-1 ring-Green-300">
+        <div class="flex p-4">
+          <img class="w-24 h-24 rounded-full " src="images/prayuth.jpg">
+          <div class="p-3 py-2">
+            <p class="font-semibold">CGM48</p>
+            <p class="text-sm text-Green-600">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem fugiat eligendi dolorem, nihil
+              temporibus architecto optio molestias odio qui beatae minima illo animi deserunt aliquid error.
+              Magni a incidunt quo.
+            </p>
+          </div>
+        </div>
+
+      </div>
+
+      <p class="text-center py-4 text-Green-500 m-2 ">Copyright © 2021 Dogstagram</p>
+
+    </div>
+
+
+</body>
+
 </html>
