--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
              <div class="flex items-center justify-center mb-10">
                <div class="flex justify-between max-w-screen-md ">
                  <div class="flex items-center justify-center mb-10">
-            <img src="images/p1.jpg" alt="" class="rounded-full w-60 border-4 border-grey-300">
+            <img src="S__10166277.jpg" alt="" class="rounded-full w-60 border-4 border-grey-300">
 </div>          
 <footer></footer>
 </body>
