--- a/experience.html
+++ b/experience.html
@@ -9,21 +9,24 @@
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
   </head>
 
-  <body class="m-0 p-0 bg-gradient-to-r from-green-400 to-blue-500 ">
+  <body class="bg-red-400">
     <!--Head bar-->
-    <div class="bg-white flex flex-nowrap rounded-l-2xl py-5 mt-3 ring-4 ring-gray-400 lg:justify-end md:justify-center">
+    <div class="bg-white flex flex-nowrap rounded-l-2xl py-5 mt-3 ring-4 ring-gray-405 lg:justify-end md:justify-center">
       <ul class="list-none bg- text-center p-0 m-0 flex justify-between md:justify-center">
-        <li class="text-xl text-center"><a href="index.html" class="no-underline text-green-900 block px-5 rounded-full border-solid border-gray-200 delay-300 hover:bg-pink-400 hover:text-white" target="_blank">Home</a></li>
-        <li class="text-xl text-center"><a href="experience.html" class="no-underline text-green-900 block px-5 rounded-full border-solid border-gray-200 delay-300 hover:bg-pink-400 hover:text-white" target="_blank">Experience</a></li>
-        <li class="text-xl text-center"><a href="contact.html" class="no-underline text-green-900 block px-5 rounded-full border-solid border-gray-200 delay-300 hover:bg-pink-400 hover:text-white" target="_blank">Contact</a></li>
-      </ul>
-    </div>
-    <!-- Title -->
-    <div class="bg-white flex rounded-b-2xl shadow-lg mx-10 mt-1 h-screen mb-10">
-      <!-- Open title -->
-      
-    </div>
-    <footer></footer>
-  </body>
-
+      <li class="text-xl text-center"><a href="index.html" class="no-underline text-green-700 block px-5  border-solid border-gray-200 delay-300 hover:bg-pink-400 hover:text-Yellow" target="_blank">Home</a></li>
+      <li class="text-xl text-center"><a href="experience.html" class="no-underline text-green-700 block px-5  border-solid border-gray-200 delay-300 hover:bg-pink-400 hover:text-Yellow" target="_blank">Experience</a></li>
+      <li class="text-xl text-center"><a href="contact.html" class="no-underline text-green-700 block px-5  border-solid border-gray-200 delay-300 hover:bg-pink-400 hover:text-Yellow" target="_blank">Contact</a></li>
+    </ul>
+     </div>
+      <!--element ด้านบน เว้นระยะห่างของเมนู-->
+        <div class="flex items-center justify-center mt-5">
+          <div class="h-screen bg-green-200 max-h-screen w-1/8 p-10  shadow-lg rounded-xl ring-1 ring-gray-305">
+            <!--menu link-->
+              <div class="flex items-center justify-center mb-10">
+                <div class="flex justify-between max-w-screen-md ">
+                  <div class="flex items-center justify-center mb-10">
+             <img src="S__10166277.jpg" alt="" class="rounded-full w-60 border-4 border-grey-300">
+ </div>          
+ <footer></footer>
+ </body>
 </html>
