--- a/experience.html
+++ b/experience.html
@@ -1,32 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Resume Website</title>
-    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Home Live "Yodsakorn"</title>
+  <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@200&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@500&display=swap" rel="stylesheet">
+</head>
 
-  <body class="bg-red-400">
-    <!--Head bar-->
-    <div class="bg-white flex flex-nowrap rounded-l-2xl py-5 mt-3 ring-4 ring-gray-405 lg:justify-end md:justify-center">
-      <ul class="list-none bg- text-center p-0 m-0 flex justify-between md:justify-center">
-      <li class="text-xl text-center"><a href="index.html" class="no-underline text-green-700 block px-5  border-solid border-gray-200 delay-300 hover:bg-pink-400 hover:text-Yellow" target="_blank">Home</a></li>
-      <li class="text-xl text-center"><a href="experience.html" class="no-underline text-green-700 block px-5  border-solid border-gray-200 delay-300 hover:bg-pink-400 hover:text-Yellow" target="_blank">Experience</a></li>
-      <li class="text-xl text-center"><a href="contact.html" class="no-underline text-green-700 block px-5  border-solid border-gray-200 delay-300 hover:bg-pink-400 hover:text-Yellow" target="_blank">Contact</a></li>
-    </ul>
-     </div>
-      <!--element ด้านบน เว้นระยะห่างของเมนู-->
-        <div class="flex items-center justify-center mt-5">
-          <div class="h-screen bg-green-200 max-h-screen w-1/8 p-10  shadow-lg rounded-xl ring-1 ring-gray-305">
-            <!--menu link-->
-              <div class="flex items-center justify-center mb-10">
-                <div class="flex justify-between max-w-screen-md ">
-                  <div class="flex items-center justify-center mb-10">
-             <img src="S__10166277.jpg" alt="" class="rounded-full w-60 border-4 border-grey-300">
- </div>          
- <footer></footer>
- </body>
+<body class="bg-red-400">
+   <!--Head bar-->
+   <div class="bg-Blue flex flex-nowrap rounded-l-2xl py-5 mt-3 ring-4 ring-gray-405 lg:justify-end md:justify-center">
+     <ul class="list-none bg- text-center p-0 m-0 flex justify-between md:justify-center">
+     <li class="text-xl text-center"><a href="index.html" class="no-underline text-green-700 block px-5  border-solid border-gray-200 delay-300 hover:bg-pink-400 hover:text-Yellow" target="_blank">Home</a></li>
+     <li class="text-xl text-center"><a href="experience.html" class="no-underline text-green-700 block px-5  border-solid border-gray-200 delay-300 hover:bg-pink-400 hover:text-Yellow" target="_blank">Experience</a></li>
+     <li class="text-xl text-center"><a href="contact.html" class="no-underline text-green-700 block px-5  border-solid border-gray-200 delay-300 hover:bg-pink-400 hover:text-Yellow" target="_blank">Contact</a></li>
+   </ul>
+    </div>
+     <!--element ด้านบน เว้นระยะห่างของเมนู-->
+       <div class="flex items-center justify-center mt-5">
+         <div class="h-screen bg-green-200 max-h-screen w-1/8 p-10  shadow-lg rounded-xl ring-1 ring-gray-305">
+           <!--menu link-->
+             <div class="flex items-center justify-center mb-10">
+               <div class="flex justify-between max-w-screen-md ">
+                 <div class="flex items-center justify-center mb-10">
+            <img src="./img/ดาวน์โหลด.jpg" alt="" class="rounded-full w-60 border-4 border-grey-300">
+</div>          
+<footer></footer>
+</body>
+    <div class="bg-white w-7/12 p-10 h-auto shadow-lg rounded-xl ring-1 ring-Green-300">
+
+      <p class="flex text-xl font-bold">
+      <div class="text-center text-xl font-bold">
+      </p>
+
+
+      <p class="flex mt-8 text-xl font-bold">
+      <div class="text-center text-xl font-bold">
+        <font2>My experience</font2>
+      </div>
+      </p>
+      <div class="bg-white max-w-screen-sm mx-auto shadow-lg rounded-full">
+        <div class="flex">
+          <img class="w-24 h-24 rounded-l-full" src="./img/sport day.jpg">
+          <div class="p-4">
+            <p class="font-semibold">Sport day</p>
+            <p class="text-sm text-gray-600">The story is where I study at mathayom. My school have sport day evey year. this sportday
+              make me to follower and leader together. So I love this spoert day </p>
+          </div>
+        </div>
+      </div> </div>
+      <div class="bg-white max-w-screen-sm mx-auto shadow-lg rounded-full">
+        <div class="flex">
+          <img class="w-24 h-24 rounded-l-full" src="./img/gitfed camp.jpg">
+          <div class="p-4">
+            <p class="font-semibold">gitfed camp</p>
+            <p class="text-sm text-gray-600">The story is where i study at mathayom 4 and mathayom 5 have gitfed camp. When mathayom 4, 
+              I am follower to mathayom 5 and make activity togther. When mathayom 5, I am leader and make me happy.  </p>
+          </div>
+        </div>
+      </div>
+      
+      <p class="text-center text-gray-600 mt-5">Copyright © 2021 Inspairation</p>
+    </div>
+
+
+</body>
+
 </html>
