--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body class="bg-red-400">
    <!--Head bar-->
-   <div class="bg-white flex flex-nowrap rounded-l-2xl py-5 mt-3 ring-4 ring-gray-405 lg:justify-end md:justify-center">
+   <div class="bg-Blue flex flex-nowrap rounded-l-2xl py-5 mt-3 ring-4 ring-gray-405 lg:justify-end md:justify-center">
      <ul class="list-none bg- text-center p-0 m-0 flex justify-between md:justify-center">
      <li class="text-xl text-center"><a href="index.html" class="no-underline text-green-700 block px-5  border-solid border-gray-200 delay-300 hover:bg-pink-400 hover:text-Yellow" target="_blank">Home</a></li>
      <li class="text-xl text-center"><a href="experience.html" class="no-underline text-green-700 block px-5  border-solid border-gray-200 delay-300 hover:bg-pink-400 hover:text-Yellow" target="_blank">Experience</a></li>
@@ -32,13 +32,10 @@
              <div class="flex items-center justify-center mb-10">
                <div class="flex justify-between max-w-screen-md ">
                  <div class="flex items-center justify-center mb-10">
-            <img src="S__10166277.jpg" alt="" class="rounded-full w-60 border-4 border-grey-300">
+            <img src="./img/S__10166277.jpg" alt="" class="rounded-full w-60 border-4 border-grey-300">
 </div>          
 <footer></footer>
 </body>
-
-
-
     <div class="bg-white w-7/12 p-10 h-auto shadow-lg rounded-xl ring-1 ring-Green-300">
 
       <p class="flex text-xl font-bold">
@@ -48,8 +45,7 @@
       </p>
 
       <p class="flex mt-8">
-        <font2>My name is Yodsakorn Likitrungson. I was born in Chiangmai Province. I love Programming. I am studying
-          Computer Engineering at Chiangmai University. I like to learn a lot. !!!
+        <font2>My name is Yodsakorn Likitrungson. I was born in Chiangmai Province. I am 20 year old.
         </font2>
       </p>
 
@@ -59,25 +55,36 @@
         <font2>My Ability</font2>
       </div>
       </p>
-
-      <div class="flex bg-blue max-w-screen-md mx-auto mt-8 shadow-lg rounded-xl ring-1 ring-Green-300">
-        <div class="flex p-4">
-          <img class="w-24 h-24 rounded-full " src="images/prayuth.jpg">
-          <div class="p-3 py-2">
-            <p class="font-semibold">CGM48</p>
-            <p class="text-sm text-Green-600">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem fugiat eligendi dolorem, nihil
-              temporibus architecto optio molestias odio qui beatae minima illo animi deserunt aliquid error.
-              Magni a incidunt quo.
-            </p>
+      <div class="bg-white max-w-screen-sm mx-auto shadow-lg rounded-full">
+        <div class="flex">
+          <img class="w-24 h-24 rounded-l-full" src="./img/moba game.jpg">
+          <div class="p-4">
+            <p class="font-semibold">game</p>
+            <p class="text-sm text-gray-600">I love play game. It has many game, I play such dota2 , rov and other game . </p>
           </div>
         </div>
-
       </div>
-
-      <p class="text-center py-4 text-Green-500 m-2 ">Copyright © 2021 Dogstagram</p>
-
-    </div>
+      <div class="bg-white max-w-screen-sm mx-auto shadow-lg rounded-full">
+        <div class="flex">
+          <img class="w-24 h-24 rounded-l-full" src="./img/cartoon.jpg">
+          <div class="p-4">
+            <p class="font-semibold">Cartoon Book</p>
+            <p class="text-sm text-gray-600">I alway read cartoon Book. When I have free time. It make me a relax. </p>
+          </div>
+        </div>
+      </div>
+        <div class="bg-white max-w-screen-sm mx-auto shadow-lg rounded-full">
+          <div class="flex">
+            <img class="w-24 h-24 rounded-l-full" src="./img/sport.jpg">
+            <div class="p-4">
+              <p class="font-semibold">Sport</p>
+              <p class="text-sm text-gray-600">I like play Sport. It make me healthy </p>
+            </div>
+          </div>
+        </div>
+        
+        <p class="text-center text-gray-600 mt-5">Copyright © 2021 Inspairation</p>
+      </div>
 
 
 </body>
