--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
              <div class="flex items-center justify-center mb-10">
                <div class="flex justify-between max-w-screen-md ">
                  <div class="flex items-center justify-center mb-10">
-            <img src="./img/S__10166277.jpg" alt="" class="rounded-full w-60 border-4 border-grey-300">
+            <img src="./img/my-abilities-1-638.jpg" alt="" class="rounded-full w-90 h-96 border-4 border-grey-300">
 </div>          
 <footer></footer>
 </body>
@@ -83,7 +83,7 @@
           </div>
         </div>
         
-        <p class="text-center text-gray-600 mt-5">Copyright © 2021 Inspairation</p>
+        <p class="text-center text-blue-600 mt-5">Copyright © 2021 Inspairation</p>
       </div>
 
 
