--- a/experience.html
+++ b/experience.html
@@ -32,7 +32,7 @@
              <div class="flex items-center justify-center mb-10">
                <div class="flex justify-between max-w-screen-md ">
                  <div class="flex items-center justify-center mb-10">
-            <img src="./img/ดาวน์โหลด.jpg" alt="" class="rounded-full w-60 border-4 border-grey-300">
+            <img src="./img/ดาวน์โหลด.jpg" alt="" class="rounded-full w-90 h-96 border-4 border-grey-300">
 </div>          
 <footer></footer>
 </body>
@@ -69,7 +69,7 @@
         </div>
       </div>
       
-      <p class="text-center text-gray-600 mt-5">Copyright © 2021 Inspairation</p>
+      <p class="text-center text-blue-600 mt-5">Copyright © 2021 Inspairation</p>
     </div>
 
 
