--- a/Contact.html
+++ b/Contact.html
@@ -11,7 +11,7 @@
 
   <body class="bg-red-400">
     <!--Head bar-->
-    <div class="bg-white flex flex-nowrap rounded-l-2xl py-5 mt-3 ring-4 ring-gray-405 lg:justify-end md:justify-center">
+    <div class="bg-Blue flex flex-nowrap rounded-l-2xl py-5 mt-3 ring-4 ring-gray-405 lg:justify-end md:justify-center">
       <ul class="list-none bg- text-center p-0 m-0 flex justify-between md:justify-center">
       <li class="text-xl text-center"><a href="index.html" class="no-underline text-green-700 block px-5  border-solid border-gray-200 delay-300 hover:bg-pink-400 hover:text-Yellow" target="_blank">Home</a></li>
       <li class="text-xl text-center"><a href="experience.html" class="no-underline text-green-700 block px-5  border-solid border-gray-200 delay-300 hover:bg-pink-400 hover:text-Yellow" target="_blank">Experience</a></li>
@@ -25,7 +25,35 @@
               <div class="flex items-center justify-center mb-10">
                 <div class="flex justify-between max-w-screen-md ">
                   <div class="flex items-center justify-center mb-10">
-             <img src="S__10166277.jpg" alt="" class="rounded-full w-60 border-4 border-grey-300">
+             <img src="./img/S__10166277.jpg" alt="" class="rounded-full w-90 h-96 border-4 border-grey-300">
+              <!-- contain -->
+              <div class="flex bg-white max-w-screen-md mx-auto mt-4 shadow-lg rounded-xl ring-1 ring-gray-300">
+                <div class="content-center">
+                    <div class="flex flex-col m-9 ">
+                        <div class="">
+                            <p class="font-semibold">Name
+                            <p class="text-sm text-gray-610">Yodsakorn Likitrungson </p>
+                            </p>
+                        </div>
+
+                        <div class="mt-5">
+                            <p class="font-semibold">Nickname
+                            <p class="text-sm text-green-600">Men</p>
+                              <p class="font-semibold">Facebook</p>
+                            <p class="text-sm text-green-600"><a href="https://www.facebook.com/yodsakorn.likitrungson/"
+                              target="_blank">hhttps://www.facebook.com/yodsakorn.likitrungson/</a></p>
+                              <p class="font-semibold">Email</p>
+                            <p class="text-sm text-green-600"><a href="mailto:menming1234@outlook.com"
+                              target="_blank">menming1234@outlook.com</a></p>
+                            </p>
+                            <p class="text-center text-blue-600 mt-5">Copyright © 2021 Inspairation</p>
+                          </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
  </div>          
  <footer></footer>
  </body>
