--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
              <div class="flex items-center justify-center mb-10">
                <div class="flex justify-between max-w-screen-md ">
                  <div class="flex items-center justify-center mb-10">
-            <img src="./img/S__10166277.jpg" alt="" class="rounded-full w-90 h-96 border-4 border-grey-300">
+            <img src="./img/S__10166277.jpg" alt="" class="rounded-full w-70 h-90 border-4 border-grey-300">
 </div>          
 <footer></footer>
 </body>
@@ -44,18 +44,23 @@
                 <div class="flex flex-col m-8 ">
                     <div class="">
                         <p class="font-semibold">Name
-                        <p class="text-sm text-gray-600">Yodsakorn Likitrungson </p>
+                        <p class="text-sm text-green-600">Yodsakorn Likitrungson </p>
                         </p>
                     </div>
-                    <div class="mt-4">
+                <div class="mt-4">
                         <p class="font-semibold">Nickname
-                        <p class="text-sm text-gray-600">Men</p>
+                        <p class="text-sm text-green-600">Men</p>
                         <p class="font-semibold">Facebook</p>
-                        <p class="text-sm text-blue-600"><a href="https://www.facebook.com/Yodsakorn.Likitrungson"
+                        <p class="text-sm text-green-600"><a href="https://www.facebook.com/Yodsakorn.Likitrungson"
                         target="_blank">https://www.facebook.com/Yodsakorn.Likitrungson</a></p>
                         <p class="font-semibold">Email</p>
-                        <p class="text-sm text-blue-600"><a href="mailto:menming1234@outlook.com"
+                        <p class="text-sm text-green-600"><a href="mailto:menming1234@outlook.com"
                         target="_blank">menming1234@outlook.com</a></p>
+                        <p class="font-semibold">Address</p>
+                        <p class="text-sm text-green-600">5/6 Soi 3/2 Kaew Nawarat Road, Wat Ket Subdistrict, 
+                            Mueang District, Chiang Mai 50000 </p>
+                        <p class="font-semibold">Phone</p>
+                        <p class="text-sm text-green-600">083-7905021</p>
                         </p>
 
                     </div>
