--- a/experience.html
+++ b/experience.html
@@ -53,7 +53,7 @@
           <img class="w-24 h-24 rounded-l-full" src="./img/sport day.jpg">
           <div class="p-4">
             <p class="font-semibold">Sport day</p>
-            <p class="text-sm text-gray-600">The story is where I study at mathayom. My school have sport day evey year. this sportday
+            <p class="text-sm text-blue-600">The story is where I study at mathayom. My school have sport day evey year. this sportday
               make me to follower and leader together. So I love this spoert day </p>
           </div>
         </div>
@@ -63,7 +63,7 @@
           <img class="w-24 h-24 rounded-l-full" src="./img/gitfed camp.jpg">
           <div class="p-4">
             <p class="font-semibold">gitfed camp</p>
-            <p class="text-sm text-gray-600">The story is where i study at mathayom 4 and mathayom 5 have gitfed camp. When mathayom 4, 
+            <p class="text-sm text-blue-600">The story is where i study at mathayom 4 and mathayom 5 have gitfed camp. When mathayom 4, 
               I am follower to mathayom 5 and make activity togther. When mathayom 5, I am leader and make me happy.  </p>
           </div>
         </div>
